# devanagari_ocr_app

./: main.py  pyproject.toml  requirements.txt  server.py
models/: cnn_model.keras
