[project]
name = "devanagari-ocr-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.4",
    "keras==3.10.0",
    "pillow>=12.0.0",
    "python-multipart>=0.0.20",
    "tensorflow==2.19.0",
    "uvicorn>=0.38.0",
]
